<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Tracker</string>
    <string name="action_settings">Settings</string>

    <string name="refresh">Refresh</string>
    <string name="add_stock">Add Stock</string>
    
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    
    <string name="add_stock_symbol">Add Stock</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="stock_quantity">Quantity</string>
    <string name="saved">Saved</string>
    
    <string name="stock_alredy_exists">Stock %1$s already exists</string>
    <string name="unrecognized_stock">Unrecognized stock symdol %1$s</string>
    <string name="stock_row_view_tag_id">stock_row_view_tag_id</string>
    
    <string name="total_market_value">Total Market Value:</string>
    <string name="total_market_change">Market Value Change:</string>
    <string name="header_symbol">SYMBOL</string>
    <string name="header_last">LAST</string>
    <string name="header_qty">QTY</string>
    <string name="header_chg">CHG</string>
    
    <string name="plus">+</string>
    <string name="minus">-</string>
    
    <string name="load_error">Server Unavailable</string>
    <string name="refreshing">Refreshing</string>

</resources>
