<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headerRow"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/stock_row_height"
    android:baselineAligned="false"
    android:clickable="false"
    android:orientation="horizontal" 
    android:focusable="false">

    <RelativeLayout
        android:id="@+id/stock_symbol_and_name_layout"
        android:layout_width="@dimen/stock_symbol_and_name_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/stock_symbol_textview"
            style="@style/ColumnHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_symbol" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stock_price_layout"
        android:layout_width="@dimen/stock_price_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/stock_price_textview"
            style="@style/ColumnHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/header_last" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stock_quantity_layout"
        android:layout_width="@dimen/stock_quantity_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/stock_quantity_textview"
            style="@style/ColumnHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/header_qty" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stock_change_layout"
        android:layout_width="@dimen/stock_change_layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="15dp" >

        <TextView
            android:id="@+id/stock_change_textview"
            style="@style/ColumnHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/header_chg" />
    </RelativeLayout>

</LinearLayout>